--- a/app/src/main/res/layout/bottomsheet_item.xml
+++ b/app/src/main/res/layout/bottomsheet_item.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="15dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:focusable="true">
 
     <ImageView
         android:id="@+id/leading_icon"
