--- a/app/src/main/res/layout/layout_reel.xml
+++ b/app/src/main/res/layout/layout_reel.xml
@@ -57,7 +57,7 @@
             android:background="@null"
             android:src="@drawable/ic_play_arrow"
             android:scaleType="fitCenter"
-            app:tint="#80ffffff"
+            app:tint="@color/transparent_50_white"
         />
 
     </FrameLayout>
