--- a/app/src/main/res/layout/detail_post.xml
+++ b/app/src/main/res/layout/detail_post.xml
@@ -265,6 +265,7 @@
                             android:textColor="@color/text_primary"
                             android:text="10" />
                         <TextView
+                            android:id="@+id/like_title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="14dp"
