--- a/app/src/main/res/layout/detail_post.xml
+++ b/app/src/main/res/layout/detail_post.xml
@@ -130,35 +130,35 @@
                             app:layout_constraintTop_toTopOf="@+id/user_name"
                             >
                             <TextView
-                                android:id="@+id/follow"
+                                android:id="@+id/numberOfReport"
                                 android:visibility="visible"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:background="@drawable/shape_retangle_border_radius_purple"
-                                android:text="Theo dõi"
+                                android:text="0 báo cáo"
                                 android:layout_marginEnd="5dp"
                                 android:textColor="@color/primary_2"
                                 android:textSize="12sp"
                                 android:paddingHorizontal="10dp"
                                 android:paddingVertical="2dp"/>
                             <TextView
-                                android:id="@+id/edit"
+                                android:id="@+id/status"
                                 android:layout_marginEnd="5dp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:background="@drawable/cancel_button_background"
-                                android:text="Trò chuyện"
+                                android:text="Đã ẩn"
                                 android:visibility="gone"
                                 android:textColor="@color/primary_2"
                                 android:textSize="12sp"
                                 android:paddingHorizontal="10dp"
                                 android:paddingVertical="2dp"/>
-                            <ImageView
-                                android:id="@+id/ic_more"
-                                android:layout_width="10dp"
-                                android:layout_height="10dp"
-                                android:src="@drawable/ic_more"
-                                />
+<!--                            <ImageView-->
+<!--                                android:id="@+id/ic_more"-->
+<!--                                android:layout_width="10dp"-->
+<!--                                android:layout_height="10dp"-->
+<!--                                android:src="@drawable/ic_more"-->
+<!--                                />-->
                         </LinearLayout>
 
                         <TextView
@@ -221,13 +221,6 @@
                                 android:textSize="12sp"
                                 android:layout_marginStart="10dp"
                                 />
-                            <ImageView
-                                android:id="@+id/ic_share"
-                                android:layout_width="20dp"
-                                android:layout_height="20dp"
-                                android:src="@drawable/ic_share"
-                                android:layout_marginStart="20dp"
-                                />
                         </LinearLayout>
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -249,6 +242,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
                         <TextView
+                            android:id="@+id/comment_title"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="14dp"
@@ -289,6 +283,16 @@
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/comment_layout"
                         />
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/report_recycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/comment_layout"
+                        android:visibility="gone"
+                        />
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.core.widget.NestedScrollView>
@@ -313,18 +317,8 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginStart="14dp"
-                    android:src="@drawable/smile"
+                    android:src="@drawable/ic_close"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    />
-                <ImageView
-                    android:id="@+id/icon_image"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginLeft="17dp"
-                    android:src="@drawable/ic_aplus"
-                    app:layout_constraintLeft_toRightOf="@id/icon_emoji"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     />
@@ -334,16 +328,16 @@
                     style="@style/medium_16"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_marginStart="90dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginEnd="80dp"
                     android:background="@drawable/add_comment_background"
                     android:gravity="center"
-                    android:hint="Để lại một bình luận"
+                    android:hint="Nhập nội dung ẩn bài đăng"
                     android:paddingHorizontal="20dp"
                     android:textColor="@color/text_secondary"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/post"
-                    app:layout_constraintLeft_toRightOf="@id/icon_image"
+                    app:layout_constraintLeft_toRightOf="@id/icon_emoji"
                     app:layout_constraintTop_toTopOf="parent" />
                 <ImageView
                     android:id="@+id/post"
