--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -82,16 +82,16 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <ImageView
-                android:id="@+id/add_post"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginBottom="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_width="55dp"
-                android:layout_height="55dp"
-                android:src="@drawable/add_post_image"
-                />
+<!--            <ImageView-->
+<!--                android:id="@+id/add_post"-->
+<!--                android:layout_alignParentBottom="true"-->
+<!--                android:layout_alignParentEnd="true"-->
+<!--                android:layout_marginBottom="20dp"-->
+<!--                android:layout_marginEnd="20dp"-->
+<!--                android:layout_width="55dp"-->
+<!--                android:layout_height="55dp"-->
+<!--                android:src="@drawable/add_post_image"-->
+<!--                />-->
         </RelativeLayout>
     </FrameLayout>
 </layout>
