fix: push notification

--- a/app/src/main/res/layouts/home/layout/fragment_home.xml
+++ b/app/src/main/res/layouts/home/layout/fragment_home.xml
@@ -217,6 +217,7 @@
                     android:id="@+id/recycler_users"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:nestedScrollingEnabled="false"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/layout_buttons"
