--- a/app/src/main/res/layouts/home/layout/item_user.xml
+++ b/app/src/main/res/layouts/home/layout/item_user.xml
@@ -116,34 +116,34 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1" />
-                <TextView
-                    android:id="@+id/follow"
-                    android:visibility="visible"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/shape_retangle_border_radius_purple"
-                    android:text="Theo dõi"
-                    android:layout_marginEnd="5dp"
-                    android:textColor="@color/primary_2"
-                    android:textSize="12sp"
-                    android:paddingHorizontal="10dp"
-                    android:paddingVertical="2dp"
-                    android:layout_gravity="end"
-                     />
-                <TextView
-                    android:id="@+id/chat"
-                    android:layout_marginEnd="5dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/cancel_button_background"
-                    android:text="Trò chuyện"
-                    android:visibility="gone"
-                    android:textColor="@color/primary_2"
-                    android:textSize="12sp"
-                    android:paddingHorizontal="10dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:paddingVertical="2dp"/>
+<!--                <TextView-->
+<!--                    android:id="@+id/follow"-->
+<!--                    android:visibility="visible"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:background="@drawable/shape_retangle_border_radius_purple"-->
+<!--                    android:text="Theo dõi"-->
+<!--                    android:layout_marginEnd="5dp"-->
+<!--                    android:textColor="@color/primary_2"-->
+<!--                    android:textSize="12sp"-->
+<!--                    android:paddingHorizontal="10dp"-->
+<!--                    android:paddingVertical="2dp"-->
+<!--                    android:layout_gravity="end"-->
+<!--                     />-->
+<!--                <TextView-->
+<!--                    android:id="@+id/chat"-->
+<!--                    android:layout_marginEnd="5dp"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:background="@drawable/cancel_button_background"-->
+<!--                    android:text="Trò chuyện"-->
+<!--                    android:visibility="gone"-->
+<!--                    android:textColor="@color/primary_2"-->
+<!--                    android:textSize="12sp"-->
+<!--                    android:paddingHorizontal="10dp"-->
+<!--                    android:clickable="true"-->
+<!--                    android:focusable="true"-->
+<!--                    android:paddingVertical="2dp"/>-->
 
             </LinearLayout>
             <TextView
