--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -35,44 +35,34 @@
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view_story"
+
+    <LinearLayout
+        android:id="@+id/search_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:background="@drawable/background"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/appbar"
-        >
+        android:paddingHorizontal="25dp"
+        android:paddingVertical="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appbar">
 
-    </androidx.recyclerview.widget.RecyclerView>
-    <LinearLayout
-            android:id="@+id/search_bar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@drawable/background"
-            app:layout_constraintTop_toBottomOf="@+id/recycler_view_story"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginHorizontal="10dp"
-            android:paddingVertical="10dp"
-            android:paddingHorizontal="25dp"
-            android:layout_marginBottom="40dp"
-            android:gravity="center_vertical"
-    >
         <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/ic_search"
-                android:layout_marginEnd="12dp"
-        />
+            android:id="@+id/imageView"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginEnd="12dp"
+            android:src="@drawable/ic_search" />
+
         <TextView
-                android:id="@+id/search_title"
-                android:layout_width="wrap_content"
-                android:textColor="@color/text_secondary"
-                android:layout_height="wrap_content"
-                android:text="Tìm kiếm lịch sử cuộc trò chuyện"
-        />
+            android:id="@+id/search_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tìm kiếm lịch sử cuộc trò chuyện"
+            android:textColor="@color/text_secondary" />
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/list_user"
