--- a/app/src/main/res/layout/activity_call_on_chat.xml
+++ b/app/src/main/res/layout/activity_call_on_chat.xml
@@ -18,6 +18,18 @@
         android:layout_marginTop="15dp"
         android:layout_marginStart="20dp"/>
 
+    <TextView
+        android:id="@+id/tv_name_remote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        style="@style/bold_20"
+        android:textColor="@color/text_white"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <LinearLayout
         android:id="@+id/linear_avatar"
         android:layout_width="match_parent"
