--- a/app/src/main/res/layout/activity_disable_user.xml
+++ b/app/src/main/res/layout/activity_disable_user.xml
@@ -6,10 +6,15 @@
     <data >
 
     </data>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/content_layout"
+        >
 
         <TextView
             android:layout_width="match_parent"
@@ -124,4 +129,12 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone" /> <!-- Initially set to gone -->
+
+    </FrameLayout>
 </layout>
