--- a/app/src/main/res/layout/fragment_swipe_view.xml
+++ b/app/src/main/res/layout/fragment_swipe_view.xml
@@ -13,6 +13,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@color/white"
         android:elevation="4dp"
+        app:menu="@menu/chat_menu"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
@@ -21,7 +22,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Your App Name"
+            android:text="Fimae"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="bold"/>
