fix: add Permission req and update waiting in add images DatingAddImages

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.example.fimae.service.CustomViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_paper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
