feat: add shimmer for dating

--- a/app/src/main/res/layout/fragment_swipe_view.xml
+++ b/app/src/main/res/layout/fragment_swipe_view.xml
@@ -147,6 +147,34 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/hasProfileTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/black"
+        android:text="Bạn chưa có tài khoản vui lòng tạo ở góc trên bên phải màn hình"
+        ></TextView>
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer_view_users"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+        <LinearLayout
+            android:id="@+id/swipeViewShimmer"
+            android:visibility="gone"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:background="@color/gray_200"
+            android:layout_marginBottom="65dp"/>
+    </com.facebook.shimmer.ShimmerFrameLayout>
+
     <com.mindorks.placeholderview.SwipePlaceHolderView
         android:id="@+id/swipeView"
         android:layout_width="match_parent"
