--- a/app/src/main/res/layout/fragment_dating_general_settings.xml
+++ b/app/src/main/res/layout/fragment_dating_general_settings.xml
@@ -46,6 +46,16 @@
             android:layout_height="match_parent" />
 
     </LinearLayout>
+    <com.example.fimae.components.ListTile
+        android:id="@+id/lt_add_images"
+        app:leadingIconVisibility="false"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:title="Cập nhật ảnh"
+        app:subtitleVisibility="false"
+        app:trailingIconVisibility="true"
+        app:trailingIcon="@drawable/arrow_right"
+        app:layout_constraintTop_toBottomOf="@id/layout_pause_matching" />
     <ImageView
         android:paddingVertical="5dp"
         android:id="@+id/space_1"
@@ -54,7 +64,7 @@
         android:src="@color/gray_400"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        app:layout_constraintTop_toBottomOf="@id/layout_pause_matching"/>
+        app:layout_constraintTop_toBottomOf="@id/lt_add_images"/>
     <TextView
         android:id="@+id/tv_dating_settings_title_2"
         android:layout_width="match_parent"
