--- a/app/src/main/res/layout/activity_on_chat.xml
+++ b/app/src/main/res/layout/activity_on_chat.xml
@@ -46,18 +46,24 @@
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
+
     <androidx.recyclerview.widget.RecyclerView
-            app:layout_constraintVertical_weight="1"
-            app:reverseLayout="false"
-            android:id="@+id/list_messages"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@+id/appbar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:divider="@null"
-            android:dividerHeight="0dp"
-            app:layout_constraintBottom_toTopOf="@+id/input_layout"/>
+        android:id="@+id/list_messages"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/input_layout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/appbar"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_weight="1"
+        app:reverseLayout="false" />
+
     <LinearLayout
             android:id="@+id/input_layout"
             android:layout_width="match_parent"
